  the field filter dialogs.
- Small layout fixes for the loan administration panel.
- Added sorting capabilities to the General Field Settings dialog.
- Added look & feels; FlatLaf IntelliJ, FlatLaf Dark & FlatLaf Darcula
- File Renamer; renamed Start button to Preview.
- Find & Replace; renamed Appy button to Preview.

[Fixed]
- Discogs.com service now handles sub tracks correctly.
- Corrected all incorrect base settings, for new installation.
- Cleanup; corrected the record label module and field references, internal names
  were incorrect. The database will be automatically updated.
- Sorting of values was not correct for the tree panels and for the auto numbering tool
  (for special characters).
- Server: user could not be edited (error + client got stuck).
- Server: children were not saved when creating a new item.
- Server: performance was impacted due to the fact that the whole user object was
  serialized for each permission entry.
- Server: loan module check for editing allowed was depending on the plugin being
  loaded. It should only have checked to see whether the permission was given as the
  server does not have access to the plugins themselves.
- Sorting was not correct when including reference fields (for special characters).
- Icons showing too large (unscaled) in the reference selection field.
- Descriptive setting not correctly applied for media, person and property items.
- Fixed the layout in the toolbar, ugly line in front of Quick Search.
- Help updates; reviewed all help files and remove incorrect references and incorrect
  information.
- Removed references to no longer existing parameters (-clearsettings and -nosplash).
- Property maintenance overviews did not adhere to the descriptive field settings.
- Fixed a NullPointerException in the Auto Numbering tool in case order
  fields were selected except for the first level.
- File Importer; the specific music file import dialog was not used in the Music Album