@@ -47,6 +47,11 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
 - Added look & feels; FlatLaf IntelliJ, FlatLaf Dark & FlatLaf Darcula
 - File Renamer; renamed Start button to Preview.
 - Find & Replace; renamed Appy button to Preview.
+- The help system was relying on old library called Java Help. As the information within
+  was hard to maintained it has been decided to move the help system onto the datacrow.org
+  website (https://datacrow.org/docs). When you press F1 for help, this page will be opened.
+  Pages have been mapped to the appropriate topics you are requesting help for, as was the
+  case for the old help system.
 
 [Fixed]
 - Discogs.com service now handles sub tracks correctly.
@@ -76,16 +81,18 @@ BoardGamesAtlas.com. On the Movie front a new online search has been added; Movi
   module, instead the generic import dialog was shown.
 - When exporting loans to an iCalender file the description and summary of the event
   contained %1 instead of the item type.
+- Many corrections have been made to the help system.
 
 [To Do]
-- Move help to online.
-- Finish the synch server.
 - Discogs.com; check title; set from details page
 - Discogs.com; add artist search mode for albums
 - Books, add: year of original issue & translators
 - Online search for books: add translators
-- Related Items; show items using the descriptive setting if possible.
+- Add merge items help page
 
+Next version
+- Related Items; show items using the descriptive setting if possible.
+- Finish the synch server.
 
 -----------------------------------------------------------------------------------------
 Data Crow version 4.7.0                                            Released on 2023-03-02
